website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.1.1/seo.mdx
---
description: How to make your Docusaurus site maximally search-engine-friendly.
sidebar_label: SEO
keywords:
  - seo
  - positioning
---

# 搜尋引擎最佳化 (SEO)

import BrowserWindow from '@site/src/components/BrowserWindow';

Docusaurus 透過多種方式支援搜尋引擎最佳化。

## 全域元數據 {#global-metadata}

透過[網站設定](./configuration.mdx#site-metadata)為整個網站提供全域元屬性。這些元數據將以鍵值對形式作為屬性名稱和值，全部渲染在 HTML 的 `<head>` 中。`metadata` 屬性是宣告 `<meta>` 標籤的便捷方式，但也可以透過 `headTags` 屬性在 `<head>` 中注入任意標籤。

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // Declare some <meta> tags
    metadata: [
      {name: 'keywords', content: 'cooking, blog'},
      {name: 'twitter:card', content: 'summary_large_image'},
    ],
  },
  headTags: [
    // Declare a <link> preconnect tag
    {
      tagName: 'link',
      attributes: {
        rel: 'preconnect',
        href: 'https://example.com',
      },
    },
    // Declare some json-ld structured data
    {
      tagName: 'script',
      attributes: {
        type: 'application/ld+json',
      },
      innerHTML: JSON.stringify({
        '@context': 'https://schema.org/',
        '@type': 'Organization',
        name: 'Meta Open Source',
        url: 'https://opensource.fb.com/',
        logo: 'https://opensource.fb.com/img/logos/Meta-Open-Source.svg',
      }),
    },
  ],
};
```

Docusaurus 預設會添加一些元數據。例如，若您配置了[國際化](./i18n/i18n-introduction.mdx)，將會獲得 [`hreflang`](https://developers.google.com/search/docs/advanced/crawling/localized-versions) 替代連結。

欲了解更多元標籤類型，請參閱 [MDN 文件](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta)。

## 單頁元數據 {#single-page-metadata}

與[全域元數據](#global-metadata)類似，Docusaurus 也允許為單個頁面添加元資訊。請遵循[本指南](./guides/markdown-features/markdown-features-head-metadata.mdx)配置 `<head>` 標籤。簡而言之：

```md title="my-markdown-page.md"
# A cooking guide

<head>
  <meta name="keywords" content="cooking, blog" />
  <meta name="twitter:card" content="summary_large_image" />
  <link rel="preconnect" href="https://example.com" />
  <script type="application/ld+json">
    {JSON.stringify({
      '@context': 'https://schema.org/',
      '@type': 'Organization',
      name: 'Meta Open Source',
      url: 'https://opensource.fb.com/',
      logo: 'https://opensource.fb.com/img/logos/Meta-Open-Source.svg',
    })}
  </script>
</head>

Some content...
```

Docusaurus 會自動為每個 Markdown 頁面添加 `description`、`title`、標準化 URL 連結和其他實用元數據。這些可透過[前置資料](./guides/markdown-features/markdown-features-intro.mdx#front-matter)配置：

```md
---
title: Title for search engines; can be different from the actual heading
description: A short description of this page
image: a thumbnail image to be shown in social media cards
keywords: [keywords, describing, the main topics]
---
```

在建立 React 頁面時，於 `Layout` 中添加這些欄位也能提升 SEO。

:::tip

對於 `description` 和 `keywords` 等欄位，建議使用[前置資料](./guides/markdown-features/markdown-features-intro.mdx#front-matter)：Docusaurus 會自動將其同時應用於 `description` 和 `og:description`，而使用 `<head>` 標籤時則需手動宣告兩個元數據標籤。

:::

:::info

官方插件均支援以下[前置資料](./guides/markdown-features/markdown-features-intro.mdx#front-matter)：`title`、`description`、`keywords` 和 `image`。請參閱各自 API 文件以了解其他[前置資料](./guides/markdown-features/markdown-features-intro.mdx#front-matter)支援：

- [文件前置資料](./api/plugins/plugin-content-docs.mdx#markdown-front-matter)
- [部落格前置資料](./api/plugins/plugin-content-blog.mdx#markdown-front-matter)
- [頁面前置資料](./api/plugins/plugin-content-pages.mdx#markdown-front-matter)

:::

對於 JSX 頁面，您可以使用 Docusaurus 的 [`<Head>`](docusaurus-core.mdx#head) 元件。

```jsx title="my-react-page.jsx"
import React from 'react';
import Layout from '@theme/Layout';
import Head from '@docusaurus/Head';

export default function page() {
  return (
    <Layout title="Page" description="A React page demo">
      <Head>
        <meta property="og:image" content="image.png" />
        <meta name="twitter:card" content="summary_large_image" />
        <link rel="preconnect" href="https://example.com" />
        <script type="application/ld+json">
          {JSON.stringify({
            '@context': 'https://schema.org/',
            '@type': 'Organization',
            name: 'Meta Open Source',
            url: 'https://opensource.fb.com/',
            logo: 'https://opensource.fb.com/img/logos/Meta-Open-Source.svg',
          })}
        </script>
      </Head>
      {/* ... */}
    </Layout>
  );
}
```

:::tip

為方便起見，預設主題的 `<Layout>` 元件接受 `title` 和 `description` 作為屬性。

:::

## 靜態 HTML 生成 {#static-html-generation}

Docusaurus 是靜態網站生成器——每個 URL 路由都會靜態生成 HTML 文件，這有助於搜尋引擎更輕鬆地發現您的內容。

## 圖片元描述 {#image-meta-description}

圖片的 alt 標籤告訴搜尋引擎圖片的內容，並在圖片無法視覺呈現時使用（例如使用螢幕閱讀器或圖片損壞時）。Alt 標籤在 Markdown 中普遍支援。

您也可以為圖片添加 title——這對 SEO 影響不大，但會在懸停在圖片上時顯示為工具提示，通常用於提供提示。

```md
![Docusaurus banner](./assets/docusaurus-asset-example-banner.png 'Image title')
```

<BrowserWindow>

![Docusaurus banner](./assets/docusaurus-asset-example-banner.png 'Image title')

</BrowserWindow>

## 豐富搜尋資訊 {#rich-search-information}

Docusaurus 部落格預設支援[豐富搜尋結果](https://search.google.com/test/rich-results)，以獲得最佳搜尋引擎體驗。這些資訊是根據您在部落格/全域設定中的元資訊生成。要獲取豐富搜尋資訊的優勢，請填寫文章的發布日期、作者、圖片等資訊。更多關於元資訊的內容請參閱[此處](./blog.mdx)。

## Robots 檔案 {#robots-file}

`robots.txt` 檔案規範搜尋引擎哪些內容應該顯示、哪些不應該顯示。您可以將其作為[靜態資源](./static-assets.mdx)提供。以下設定允許所有請求存取所有子頁面：

```text title="static/robots.txt"
User-agent: *
Disallow:
```

更多關於 robots 檔案的資訊請參閱[Google 文件](https://developers.google.com/search/docs/advanced/robots/intro)。

:::warning

**重要**：`robots.txt` 檔案**不會**阻止 HTML 頁面被索引。

若要防止整個 Docusaurus 網站被索引，請使用 [`noIndex`](./api/docusaurus.config.js.mdx#noIndex) 網站設定。某些[託管服務提供商](./deployment.mdx)可能也允許您設定 `X-Robots-Tag: noindex` HTTP 標頭（GitHub Pages 不支援此功能）。

若要防止單一頁面被索引，請使用 `<meta name="robots" content="noindex">` 作為[頁面元資訊](#single-page-metadata)。更多關於 [robots 元標籤](https://developers.google.com/search/docs/advanced/robots/robots_meta_tag)的資訊。

:::

## 網站地圖檔案 {#sitemap-file}

Docusaurus 提供預設隨 `preset-classic` 附帶的 [`@docusaurus/plugin-sitemap`](./api/plugins/plugin-sitemap.mdx) 外掛程式。它會自動生成 `sitemap.xml` 檔案，在正式環境建置後可透過 `https://example.com/[baseUrl]/sitemap.xml` 存取。此網站地圖元資料有助於搜尋引擎爬蟲更準確地爬取您的網站。

:::tip

網站地圖外掛程式會自動過濾包含 `noindex` [robots 元指令](https://developers.google.com/search/docs/advanced/robots/robots_meta_tag)的頁面。

例如，[`/examples/noIndex`](/examples/noIndex) 未包含在 [Docusaurus sitemap.xml 檔案](pathname:///sitemap.xml)中，因為它包含以下[頁面元資訊](#single-page-metadata)：

```html
<head>
  <meta name="robots" content="noindex, nofollow" />
</head>
```

:::

## 人類可讀連結 {#human-readable-links}

Docusaurus 使用您的檔案名稱作為連結，但您始終可以使用 slugs 來更改，詳見此[教學](./guides/docs/docs-create-doc.mdx#document-id)。

## 結構化內容 {#structured-content}

搜尋引擎依賴 HTML 標記如 `<h2>`、`<table>` 等來理解您的網頁結構。當 Docusaurus 渲染您的頁面時，會使用語義標記如 `<aside>`、`<nav>`、`<main>` 來劃分頁面的不同部分，幫助搜尋引擎定位側邊欄、導航欄和主要頁面內容等區域。

大多數 [CommonMark](https://spec.commonmark.org/0.30/#atx-headings) 語法都有對應的 HTML 標籤。透過在專案中一致地使用 Markdown，您將使搜尋引擎更容易理解您的頁面內容。